@@ -5,13 +5,13 @@ import lombok.extern.slf4j.Slf4j;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 import vn.edu.hcmute.utecare.dto.request.DigestiveTestRequest;
 import vn.edu.hcmute.utecare.dto.response.DigestiveTestResponse;
-import vn.edu.hcmute.utecare.exception.NotFoundException;
+import vn.edu.hcmute.utecare.exception.ResourceNotFoundException;
 import vn.edu.hcmute.utecare.mapper.DigestiveTestMapper;
 import vn.edu.hcmute.utecare.model.DigestiveTest;
 import vn.edu.hcmute.utecare.model.Encounter;
-
 import vn.edu.hcmute.utecare.dto.response.PageResponse;
 import vn.edu.hcmute.utecare.repository.DigestiveTestRepository;
 import vn.edu.hcmute.utecare.repository.EncounterRepository;
@@ -22,7 +22,6 @@ import vn.edu.hcmute.utecare.util.enumeration.EMedicalTest;
 import java.time.LocalDate;
 import java.time.LocalDateTime;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -31,96 +30,110 @@ public class DigestiveTestServiceImpl implements DigestiveTestService {
 
     private final DigestiveTestRepository digestiveTestRepository;
     private final EncounterRepository encounterRepository;
-
+    private final DigestiveTestMapper digestiveTestMapper;
 
     @Override
+    @Transactional
     public DigestiveTestResponse createDigestiveTest(DigestiveTestRequest request) {
-        log.info("Tạo DigestiveTest mới: {}", request);
+        log.info("Tạo xét nghiệm tiêu hóa mới: {}", request);
         Encounter encounter = encounterRepository.findById(request.getEncounterId())
-                .orElseThrow(() -> new NotFoundException("Không tìm thấy Encounter với id: " + request.getEncounterId()));
-        DigestiveTest digestiveTest = DigestiveTestMapper.INSTANCE.toEntity(request);
+                .orElseThrow(() -> new ResourceNotFoundException("Không tìm thấy cuộc gặp với ID: " + request.getEncounterId()));
+        DigestiveTest digestiveTest = digestiveTestMapper.toEntity(request);
         digestiveTest.setEncounter(encounter);
         digestiveTest.setStatus(EMedicalTest.PENDING);
         DigestiveTest savedDigestiveTest = digestiveTestRepository.save(digestiveTest);
-        return DigestiveTestMapper.INSTANCE.toResponse(savedDigestiveTest);
+        log.info("Tạo xét nghiệm tiêu hóa thành công với ID: {}", savedDigestiveTest.getId());
+        return digestiveTestMapper.toResponse(savedDigestiveTest);
     }
 
     @Override
+    @Transactional(readOnly = true)
     public DigestiveTestResponse getDigestiveTestById(Long id) {
-        log.info("Lấy thông tin DigestiveTest với id: {}", id);
+        log.info("Truy xuất xét nghiệm tiêu hóa với ID: {}", id);
         DigestiveTest digestiveTest = digestiveTestRepository.findById(id)
-                .orElseThrow(() -> new NotFoundException("Không tìm thấy DigestiveTest với id: " + id));
-        return DigestiveTestMapper.INSTANCE.toResponse(digestiveTest);
+                .orElseThrow(() -> new ResourceNotFoundException("Không tìm thấy xét nghiệm tiêu hóa với ID: " + id));
+        log.info("Truy xuất xét nghiệm tiêu hóa thành công với ID: {}", id);
+        return digestiveTestMapper.toResponse(digestiveTest);
     }
 
     @Override
+    @Transactional(readOnly = true)
     public List<DigestiveTestResponse> getAll() {
-        log.info("Lấy danh sách tất cả DigestiveTest");
+        log.info("Truy xuất danh sách tất cả xét nghiệm tiêu hóa");
         return digestiveTestRepository.findAll().stream()
-                .map(DigestiveTestMapper.INSTANCE::toResponse)
-                .collect(Collectors.toList());
+                .map(digestiveTestMapper::toResponse)
+                .toList();
     }
 
     @Override
+    @Transactional(readOnly = true)
     public PageResponse<DigestiveTestResponse> getAll(int page, int size, String sort, String direction) {
-        log.info("Lấy danh sách DigestiveTest với phân trang: page={}, size={}, sort={}, direction={}", page, size, sort, direction);
+        log.info("Truy xuất danh sách xét nghiệm tiêu hóa: trang={}, kích thước={}, sắp xếp={}, hướng={}", page, size, sort, direction);
         Pageable pageable = PaginationUtil.createPageable(page, size, sort, direction);
         Page<DigestiveTest> digestiveTestPage = digestiveTestRepository.findAll(pageable);
-
         return PageResponse.<DigestiveTestResponse>builder()
                 .currentPage(page)
                 .pageSize(size)
                 .totalPages(digestiveTestPage.getTotalPages())
                 .totalElements(digestiveTestPage.getTotalElements())
                 .content(digestiveTestPage.getContent().stream()
-                        .map(DigestiveTestMapper.INSTANCE::toResponse)
+                        .map(digestiveTestMapper::toResponse)
                         .toList())
                 .build();
     }
 
     @Override
+    @Transactional
     public DigestiveTestResponse updateDigestiveTest(Long id, DigestiveTestRequest request) {
-        log.info("Cập nhật DigestiveTest với id: {}", id);
+        log.info("Cập nhật xét nghiệm tiêu hóa với ID: {} và thông tin: {}", id, request);
         DigestiveTest digestiveTest = digestiveTestRepository.findById(id)
-                .orElseThrow(() -> new NotFoundException("Không tìm thấy DigestiveTest với id: " + id));
+                .orElseThrow(() -> new ResourceNotFoundException("Không tìm thấy xét nghiệm tiêu hóa với ID: " + id));
         Encounter encounter = encounterRepository.findById(request.getEncounterId())
-                .orElseThrow(() -> new NotFoundException("Không tìm thấy Encounter với id: " + request.getEncounterId()));
-        DigestiveTestMapper.INSTANCE.updateEntity(digestiveTest, request);
+                .orElseThrow(() -> new ResourceNotFoundException("Không tìm thấy cuộc gặp với ID: " + request.getEncounterId()));
+        digestiveTestMapper.updateEntity(digestiveTest, request);
         digestiveTest.setEncounter(encounter);
-        digestiveTestRepository.save(digestiveTest);
-        return DigestiveTestMapper.INSTANCE.toResponse(digestiveTest);
+        DigestiveTest updatedDigestiveTest = digestiveTestRepository.save(digestiveTest);
+        log.info("Cập nhật xét nghiệm tiêu hóa thành công với ID: {}", id);
+        return digestiveTestMapper.toResponse(updatedDigestiveTest);
     }
 
     @Override
+    @Transactional
     public void deleteDigestiveTest(Long id) {
-        log.info("Xóa DigestiveTest với id: {}", id);
+        log.info("Xóa xét nghiệm tiêu hóa với ID: {}", id);
         DigestiveTest digestiveTest = digestiveTestRepository.findById(id)
-                .orElseThrow(() -> new NotFoundException("Không tìm thấy DigestiveTest với id: " + id));
+                .orElseThrow(() -> new ResourceNotFoundException("Không tìm thấy xét nghiệm tiêu hóa với ID: " + id));
         digestiveTestRepository.delete(digestiveTest);
+        log.info("Xóa xét nghiệm tiêu hóa thành công với ID: {}", id);
     }
 
     @Override
+    @Transactional(readOnly = true)
     public List<DigestiveTestResponse> getAllLabTestByDateAndStatus(LocalDate date, String status) {
-        log.info("Lấy danh sách DigestiveTest theo ngày {} và trạng thái PENDING", date);
-        LocalDateTime startOfDay = date.atStartOfDay(); // 00:00:00
-        LocalDateTime endOfDay = date.atTime(23, 59, 59); // 23:59:59
-        EMedicalTest statusEnum = EMedicalTest.valueOf(String.valueOf(status)); // statusString là "PENDING", "COMPLETED",...
-        return digestiveTestRepository.findByCreateDateBetweenAndStatus(startOfDay, endOfDay, statusEnum)
-                .stream()
-                .map(DigestiveTestMapper.INSTANCE::toResponse).toList();
+        log.info("Truy xuất danh sách xét nghiệm tiêu hóa theo ngày: {} và trạng thái: {}", date, status);
+        try {
+            LocalDateTime startOfDay = date.atStartOfDay();
+            LocalDateTime endOfDay = date.atTime(23, 59, 59);
+            EMedicalTest statusEnum = EMedicalTest.valueOf(status);
+            return digestiveTestRepository.findByCreateDateBetweenAndStatus(startOfDay, endOfDay, statusEnum)
+                    .stream()
+                    .map(digestiveTestMapper::toResponse)
+                    .toList();
+        } catch (IllegalArgumentException e) {
+            throw new ResourceNotFoundException("Trạng thái xét nghiệm không hợp lệ: " + status);
+        }
     }
 
     @Override
+    @Transactional(readOnly = true)
     public List<DigestiveTestResponse> getEncounterIdAndDate(Long encounterId, LocalDate date) {
-        log.info("Lấy danh sách DigestiveTest theo encounterId {} và ngày {}", encounterId, date);
+        log.info("Truy xuất danh sách xét nghiệm tiêu hóa theo cuộc gặp ID: {} và ngày: {}", encounterId, date);
         LocalDate queryDate = (date != null) ? date : LocalDate.now();
-        LocalDateTime startOfDay = queryDate.atStartOfDay(); // 00:00:00
-        LocalDateTime endOfDay = queryDate.atTime(23, 59, 59); // 23:59:59
+        LocalDateTime startOfDay = queryDate.atStartOfDay();
+        LocalDateTime endOfDay = queryDate.atTime(23, 59, 59);
         return digestiveTestRepository.findByEncounterIdAndCreateDateBetween(encounterId, startOfDay, endOfDay)
                 .stream()
-                .map(DigestiveTestMapper.INSTANCE::toResponse)
+                .map(digestiveTestMapper::toResponse)
                 .toList();
     }
-
-
 }
